# sarker_shop_backend

./: .gitignore  README.md  db.sqlite3  pyproject.toml
accounts/: admin.py  backends.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_unique_user_email_index.py  0003_alter_customer_email.py
api/: urls.py  views.py
ecommerce_api/: settings.py  urls.py
orders/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_district_order_division_order_email_and_more.py  0003_add_variant_refs.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_delete_review.py  0003_alter_productimage_options_and_more.py  0004_product_price.py  0005_update_product_sku_simple_format.py
reviews/: admin.py  models.py  serializers.py  views.py
reviews/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
staticfiles/orders/: admin_inline.2c26fb9d69c9.js  admin_inline.be6db97eb196.js
store/: admin.py  auth_views.py  models.py  permissions.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_orderitem_price.py  0002_remove_product_brand_remove_product_model_and_more.py  0003_alter_order_address.py
templates/: invoice.html  swagger_ui.html
utils/: pdf.py
